--- a/Images.ipynb
+++ b/Images.ipynb
@@ -620,7 +620,7 @@
         "id": "hxuiNrvgQBC3"
       },
       "source": [
-        "Как видно быстрее и точне определяет золодильники модель YOLOv3.\n"
+        "Как видно быстрее и точне определяет холодильники модель YOLOv3.\n"
       ]
     }
   ]
